# agent0

./: README.md
server/: .env.backup  Dockerfile  README.md  __init__.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
server/core/: README.md  auth.py  config.py  models.py  prompts.py  story_generator.py
server/db/: database.py
server/graphql_api/: README.md  __init__.py  mutations.py  queries.py  router.py  schema.py  types.py
server/models/: auction.py  job.py  story.py  user.py
server/routers/: job.py  redis.py  story.py  websocket.py
server/schemas/: job.py  story.py
